examples/illtyped/badPoly2.gr
id : forall (a : Type) . a -> a
id x = x + 0
